@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-23T16:15:25Z",
+  "timestamp" : "2022-04-26T00:58:04Z",
   "count_outdated" : 252,
   "uniques_outdated" : 120,
-  "count" : 263,
-  "uniques" : 129,
+  "count" : 264,
+  "uniques" : 130,
   "clones" : [
     {
       "timestamp": "2022-04-18T00:00:00Z",
@@ -21,6 +21,13 @@
     },
     {
       "timestamp": "2022-04-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-25T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
