@@ -1,5 +1,5 @@
 {
-  "count": 11,
+  "count": 12,
   "uniques": 7,
   "clones": [
     {
@@ -14,6 +14,11 @@
     },
     {
       "timestamp": "2022-04-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-25T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
