@@ -1,3 +1,9 @@
+2022-04-26T00:58:04Z:
+* notice: last 14d: all unq: 12 7
+* notice: prev accum: outdated-all outdated-unq / all unq: 252 120 / 263 129
+* notice: next accum: outdated-all outdated-unq / all unq: 252 120 / 264 130
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0
+
 2022-04-23T16:15:25Z:
 * notice: last 14d: all unq: 11 7
 * notice: prev accum: outdated-all outdated-unq / all unq: 251 119 / 263 129
